syntax = "proto3";

package node.node;

option go_package = "github.com/SigmaGmbH/librustgo/types";

message InitializeMasterKeyRequest { bool shouldReset = 1; }

message InitializeMasterKeyResponse {}

// Bootstrap server messages
message StartBootstrapServerRequest { int32 fd = 1; }
message StartBootstrapServerResponse {}

// EPID Remote Attestation messages
message EPIDAttestationRequest {
  int32 fd = 1;
  string hostname = 2;
}
message EPIDAttestationResponse {}

// DCAP Remote Attestation messages
message DCAPAttestationRequest {
  int32 fd = 1;
  string hostname = 2;
}
message DCAPAttestationResponse {}

message IsInitializedRequest {}
message IsInitializedResponse { bool isInitialized = 1; }

message NodeStatusRequest {}
message NodeStatusResponse {}

message SetupRequest {
  oneof req {
    InitializeMasterKeyRequest initializeMasterKey = 1;
    StartBootstrapServerRequest startBootstrapServer = 2;
    EPIDAttestationRequest epidAttestationRequest = 3;
    DCAPAttestationRequest dcapAttestationRequest = 4;
    IsInitializedRequest isInitialized = 5;
    NodeStatusRequest nodeStatus = 6;
  }
}